[Feat] swift release note linked

--- a/swift/4.0/_posts/2009-05-15-release.md
+++ b/swift/4.0/_posts/2009-05-15-release.md
@@ -3,8 +3,8 @@ author_profile: true
 sidebar:
   title: "Swift"
   nav: sidebar-swift
-title: "Edge Case: Nested and Mixed Lists"
-categories: ["swift", "5.4"]
+title: "Release"
+categories: ["swift", "4.0"]
 toc: true
 toc_sticky: true
 toc_label: 목차
@@ -20,8 +20,12 @@ tags:
 
 ## 소주제1
 
-나만의 __멋진__ 블로그를 만들어야지.<br/>
-화이팅!
+<figure class="video_container">
+<iframe src="https://swift.org/blog/swift-4-0-released"></iframe>
+</figure>
+
+
+
 
 ```swift
 print("hello blog")
