--- a/git/blog/_posts/2021-08-18-시작하기.md
+++ b/git/blog/_posts/2021-08-18-시작하기.md
@@ -8,34 +8,84 @@ toc_sticky: true
 toc_label: 목차
 ---
 
-첫번째 포스트를 작성하고 있다.
+## 1. 개요
+- 점점 머리가 나빠진다.
+- 나의 경우 글을 작성하고 다시 보고 하면서 반복적으로 봐야 공부가 된다.
+- Github 블로그가 있었지만 새로운 테마로 새롭게 시작하고 싶었다.
+- 그래서 기존 Repo 를 제거하고 새로운 테마를 적용하면서 히스토리를 기록하기로 했다.
 
-## 소주제1
+## 2. Github 설정 하기
+- **네이밍에 유의**해서 Repo 를 만들자.
+    * ![이미지](https://drive.google.com/uc?export=view&id=1CuhXzbSrIdJjjs4DpbOl_O18oKV4FiL_)
 
-나만의 __멋진__ 블로그를 만들어야지.<br/>
-화이팅!
+- 만들어진 Repo 의 **Settings** 에 들어가자.
+![이미지](https://drive.google.com/uc?export=view&id=1B7oWnapTLtdUxbpxS5EM26rrvRoHcnNb)
 
-```swift
-print("hello blog")
+- Pages 에 가서 설정버튼 있다. 누르자! 완료!
+![이미지](https://drive.google.com/uc?export=view&id=1Oza12viPs_E5xcz4SfGJslxuxgvA44Un)
+
+## 3. 테마 설치
+* [Jekyll]( /clean-code/dictionary/jekyll/)  에 의해 구동된다.
+
+* 테마 선정 : minimal-mistakes [데모 보러 가기](https://jamstackthemes.dev/demo/theme/minimal-mistakes/)
+![이미지](https://drive.google.com/uc?export=view&id=1DbZRlyh1P4syKGbaQElM5LyS-kCpr_RO)
+- 테마는 마음에 드는 것으로 선택하자. 검색하면 테마를 모아놓은 사이트가 **아주** 많다.
+
+- [minimal-mistakes 의 설치 가이드](https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/)를 보면 각 설정들이 있는데, 이는 테마 별로 비슷한 점도 있지만 다른 점도 있다. 이 부분은 **본인이 선정한 테마의 가이드**를 참고하는 것이 가장 좋다.
+
+- bundler 를 설치하자. 로컬에서도 돌려볼 수 있기 때문에 매우 유용하다.
 ```
+gem install bundler
+```
+- 만약 [FilePermissionError](https://jojoldu.tistory.com/288) 가 발생하면 해당 사이트를 참고하자.
+    * 해당 글을 보다보면 ..zshrc, .bashrc 와 같은 내용이 있는데 맥 터미널의 경우 상단 창에 표시가 됨을 참고하자.
+    * 더 자세한 사항은 [여기](https://vnthf.github.io/blog/bash/)를 참고하자.
+- 로컬 서버 실행
+```
+bundle exec jekyll serve
+```
+- 로컬 서버 종료
+```
+commend + c
+```
+    * 참고로 config.yml 를 수정하면 재시작이 필요하다.
+    * post 나 navigation 을 수정하면 재시작이 필요없다.
+- 브라우저에서 접속해보자.
+```
+http://127.0.0.1:4000
+```
+여기 까지 된다면 성공!
 
-이 문서의 title은 '{{ page.title }}' 이다!
+## 4. Repo 에 Push 하기
+```
+git push
+```
+- 만약 Git Token 관련 [에러](https://github.blog/2020-12-15-token-authentication-requirements-for-git-operations/) 가 발생하면
+    * Settings - Developer settings - Personal access tokens - 생성 
+    * 이후 해당 키로 로그인을 하면 된다
+    * 해당 키는 안전한 곳에 백업이 필요하다.
 
-다음 문서의 title은 '{{ page.title | append: "에 이어 두번째 포스트" }}' 이다!
+## 5. Google Search 등록
+[Google Search](https://search.google.com/search-console)
+![Image](https://drive.google.com/uc?export=view&id=1mutAhqrX3idmH9tR4ty3qwN7IFQM3HgX)
 
-Here's a simple footnote,[^1] and here's a longer one.[^bignote]
+## 6. 댓글 달기
+* utteranc 를 사용했다.
+- [가이드](https://utteranc.es/?installation_id=18900368&setup_action=install) 를 보는게 가장 도움이 될 것이다.
 
-[^1]:  fdasf
 
-[^bignote]: Here's one with multiple paragraphs and code.
+## 7. Favicon 설정
+* [favicon-generator](https://www.favicon-generator.org/) 로 만들었다. 이미지첨부하면 각 환경별 favicon 을 만들어준다.
+![이미지](https://drive.google.com/uc?export=view&id=1w-cK1zDJ5c62XZM9kttxDoewIANGJLTW)
+* 다운로드 이후 Repo 의 Root 에 넣어준뒤 Push 하자.
 
-    Indent paragraphs to include them in the footnote.
-
-    `{ my code }`
-
-    Add as many paragraphs as you like.
+## 8. 추후 볼만한 사이트 모음
+* [GitHub Wiki TOC generator](https://ecotrust-canada.github.io/markdown-toc/)
+* [무료 아이콘](https://fontawesome.com/v5.15/icons?d=gallery&p=3&s=solid&m=free)
+* [블로그 등에 소스 코드 Snippet 붙여넣기 - GitHub Gist](https://hanmomhanda.tistory.com/entry/%EB%B8%94%EB%A1%9C%EA%B7%B8-%EB%93%B1%EC%97%90-%EC%86%8C%EC%8A%A4-%EC%BD%94%EB%93%9C-Snippet-%EB%B6%99%EC%97%AC%EB%84%A3%EA%B8%B0-GitHub-Gist)
+* [소스코드를 블로그에 올릴때](https://velog.io/@yeseolee/%EC%86%8C%EC%8A%A4%EC%BD%94%EB%93%9C%EB%A5%BC-%EB%B8%94%EB%A1%9C%EA%B7%B8%EC%97%90-%EC%98%AC%EB%A6%B4%EB%95%8C)
     
     
-    
+참고 사이트 : [7271kim.github.com](https://github.com/7271kim/7271kim.github.com)
 
 {% include utteranc.html %}
