알고리즘 1문제 업로드!

--- a/algorithm/data-structure/_posts/2021-08-17-stack.md
+++ b/algorithm/data-structure/_posts/2021-08-17-stack.md
@@ -1,21 +1,17 @@
 ---
-author_profile: true
 sidebar:
   title: "Algorithm"
   nav: sidebar-algorithm
 title: "Stack"
-categories: ["data-structure"]
+categories: data-structure
 toc: true
 toc_sticky: true
 toc_label: 목차
-tags:
-  - stack
-  - stackoverflow
 ---
 
 첫번째 포스트를 작성하고 있다.
 
-== 개요 ==
+## 개요
 
 Just
 
