알고리즘 - 타이틀 설정

--- a/algorithm/data-structure/_posts/2021-08-17-stack.md
+++ b/algorithm/data-structure/_posts/2021-08-17-stack.md
@@ -2,7 +2,7 @@
 sidebar:
   title: "Algorithm"
   nav: sidebar-algorithm
-title: "Stack"
+title: "Algorithm / Data Structure / Stack"
 categories: data-structure
 toc: true
 toc_sticky: true
