--- a/git/blog/_posts/2021-08-18-시작하기.md
+++ b/git/blog/_posts/2021-08-18-시작하기.md
@@ -13,6 +13,7 @@ toc_label: 목차
 - 나의 경우 글을 작성하고 다시 보고 하면서 반복적으로 봐야 공부가 된다.
 - Github 블로그가 있었지만 새로운 테마로 새롭게 시작하고 싶었다.
 - 그래서 기존 Repo 를 제거하고 새로운 테마를 적용하면서 히스토리를 기록하기로 했다.
+- 추가로 stackoverflow 의 취지가 동기부여 되었다.
 
 ## 2. Github 설정 하기
 - **네이밍에 유의**해서 Repo 를 만들자.
@@ -31,7 +32,7 @@ toc_label: 목차
 ![이미지](https://drive.google.com/uc?export=view&id=1DbZRlyh1P4syKGbaQElM5LyS-kCpr_RO)
 - 테마는 마음에 드는 것으로 선택하자. 검색하면 테마를 모아놓은 사이트가 **아주** 많다.
 
-- [minimal-mistakes 의 설치 가이드](https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/)를 보면 각 설정들이 있는데, 이는 테마 별로 비슷한 점도 있지만 다른 점도 있다. 이 부분은 **본인이 선정한 테마의 가이드**를 참고하는 것이 가장 좋다.
+- [minimal-mistakes 의 설치 가이드](https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/)를 보면 각 설정이 있는데, 이는 테마 별로 비슷한 점도 있지만 다른 점도 있다. 이 부분은 **본인이 선정한 테마의 가이드**를 참고하는 것이 가장 좋다.
 
 - bundler 를 설치하자. 로컬에서도 돌려볼 수 있기 때문에 매우 유용하다.
 ```
@@ -69,23 +70,17 @@ git push
 [Google Search](https://search.google.com/search-console)
 ![Image](https://drive.google.com/uc?export=view&id=1mutAhqrX3idmH9tR4ty3qwN7IFQM3HgX)
 
-## 6. 댓글 달기
+## 5. 댓글 달기
 * utteranc 를 사용했다.
 - [가이드](https://utteranc.es/?installation_id=18900368&setup_action=install) 를 보는게 가장 도움이 될 것이다.
 
 
-## 7. Favicon 설정
+## 6. Favicon 설정
 * [favicon-generator](https://www.favicon-generator.org/) 로 만들었다. 이미지첨부하면 각 환경별 favicon 을 만들어준다.
 ![이미지](https://drive.google.com/uc?export=view&id=1w-cK1zDJ5c62XZM9kttxDoewIANGJLTW)
 * 다운로드 이후 Repo 의 Root 에 넣어준뒤 Push 하자.
 
-## 8. 추후 볼만한 사이트 모음
-* [GitHub Wiki TOC generator](https://ecotrust-canada.github.io/markdown-toc/)
-* [무료 아이콘](https://fontawesome.com/v5.15/icons?d=gallery&p=3&s=solid&m=free)
-* [블로그 등에 소스 코드 Snippet 붙여넣기 - GitHub Gist](https://hanmomhanda.tistory.com/entry/%EB%B8%94%EB%A1%9C%EA%B7%B8-%EB%93%B1%EC%97%90-%EC%86%8C%EC%8A%A4-%EC%BD%94%EB%93%9C-Snippet-%EB%B6%99%EC%97%AC%EB%84%A3%EA%B8%B0-GitHub-Gist)
-* [소스코드를 블로그에 올릴때](https://velog.io/@yeseolee/%EC%86%8C%EC%8A%A4%EC%BD%94%EB%93%9C%EB%A5%BC-%EB%B8%94%EB%A1%9C%EA%B7%B8%EC%97%90-%EC%98%AC%EB%A6%B4%EB%95%8C)
-    
-    
+
 참고 사이트 : [7271kim.github.com](https://github.com/7271kim/7271kim.github.com)
 
 {% include utteranc.html %}
