네이버 웹 마스터 도구 연동

--- a/git/blog/_posts/2021-08-18-시작하기.md
+++ b/git/blog/_posts/2021-08-18-시작하기.md
@@ -26,8 +26,10 @@ toc_label: 목차
 ![이미지](https://drive.google.com/uc?export=view&id=1Oza12viPs_E5xcz4SfGJslxuxgvA44Un)
 
 ## 3. 테마 설치
-* [Jekyll]( /clean-code/dictionary/jekyll/)  에 의해 구동된다.
-
+* [Jekyll]( /clean-code/dictionary/jekyll/)  에 의해 구동된다. 설치하자
+```
+gem install jekyll
+```
 * 테마 선정 : minimal-mistakes [데모 보러 가기](https://jamstackthemes.dev/demo/theme/minimal-mistakes/)
 ![이미지](https://drive.google.com/uc?export=view&id=1DbZRlyh1P4syKGbaQElM5LyS-kCpr_RO)
 - 테마는 마음에 드는 것으로 선택하자. 검색하면 테마를 모아놓은 사이트가 **아주** 많다.
