몇 가지 단어 추가, 상단 타이틀 추가

--- a/git/blog/_posts/2021-08-18-start.md
+++ b/git/blog/_posts/2021-08-18-start.md
@@ -7,7 +7,9 @@ toc: true
 toc_sticky: true
 toc_label: 목차
 ---
-
+[Git](/git/) / [Blog](/git/blog/) / **Github 블로그 시작하기**
+{: .notice--warning}
+![](https://pages.github.com/images/logo.svg)
 ## 1. 개요
 - 점점 머리가 나빠진다.
 - 나의 경우 글을 작성하고 다시 보고 하면서 반복적으로 봐야 공부가 된다.
