--- a/git/commend/_posts/2021-08-17-reset.md
+++ b/git/commend/_posts/2021-08-17-reset.md
@@ -2,11 +2,15 @@
 sidebar:
   title: "Git"
   nav: sidebar-git
-title: "Git / Commend / Reset"
+title: "Reset"
 toc: true
 toc_sticky: true
 toc_label: 목차
+excerpt : "commit한 이전 코드 취소하기, 특정 시점으로 돌아가는 이력자체도 남지 않고 이동"
 ---
+[Git](/git/) / [Commend](/git/commend/) / **Reset**
+{: .notice--warning}
+![](https://git-scm.com/images/logo@2x.png)
 
 ## 1. 개요
 - commit한 이전 코드 취소하기
