--- a/git/commend/_posts/2021-08-17-revert.md
+++ b/git/commend/_posts/2021-08-17-revert.md
@@ -2,11 +2,15 @@
 sidebar:
   title: "Git"
   nav: sidebar-git
-title: "Git / Commend / Revert"
+title: "Revert"
 toc: true
 toc_sticky: true
 toc_label: 목차
+excerpt : "commit한 이전 코드 취소하기"
 ---
+[Git](/git/) / [Commend](/git/commend/) / **Revert**
+{: .notice--warning}
+![](https://git-scm.com/images/logo@2x.png)
 
 ## 1. 개요
 - commit한 이전 코드 취소하기
