--- a/git/commend/_posts/2021-08-17-rebase.md
+++ b/git/commend/_posts/2021-08-17-rebase.md
@@ -2,11 +2,16 @@
 sidebar:
   title: "Git"
   nav: sidebar-git
-title: "Git / Commend / Rebase"
+title: "Rebase"
 toc: true
 toc_sticky: true
 toc_label: 목차
+excerpt : 커밋들을 합쳐 새로운 커밋을 만든다.
 ---
+[Git](/git/) / [Commend](/git/commend/) / **Rebase**
+{: .notice--warning}
+
+![](https://git-scm.com/images/logo@2x.png)
 
 ## 1. 개요
 - 커밋들을 합쳐 새로운 커밋을 만든다.
