메뉴명 일부 리뉴얼

--- a/clean/dictionary/_posts/2021-08-17-bashrc.md
+++ b/clean/dictionary/_posts/2021-08-17-bashrc.md
@@ -1,7 +1,7 @@
 ---
 sidebar:
-  title: "Clean Code / Dictionary / bashrc"
-  nav: sidebar-clean-code
+  title: "Clean Code"
+  nav: sidebar-clean
 ---
 
 * 새로운 터미널을 열 때마다 정보를 받고 싶을 때 필요
