--- a/clean/dictionary/_posts/2021-08-17-jekyll.md
+++ b/clean/dictionary/_posts/2021-08-17-jekyll.md
@@ -1,7 +1,8 @@
 ---
 sidebar:
-  title: "Jekyll"
-  nav: sidebar-clean-code
+  title: "Clean"
+  nav: sidebar-clean
+title: "Jekyll"
 ---
 
 - Jekyll은 개인, 프로젝트 또는 조직 사이트를위한 간단한 블로그 인식 정적 사이트 생성기입니다. 
