--- a/clean/dictionary/_posts/2021-08-17-stack.md
+++ b/clean/dictionary/_posts/2021-08-17-stack.md
@@ -1,7 +1,7 @@
 ---
 sidebar:
-  title: "Clean Code"
-  nav: sidebar-clean-code
+  title: "Clean"
+  nav: sidebar-clean
 ---
 
 [명사] (컴퓨터) 스택(일시적으로 보존하고 싶은 데이터를 차례로 겹쳐 쌓듯이 수납해 가는 기억 장치)
