--- a/clean/dictionary/_posts/2021-08-17-zshrc.md
+++ b/clean/dictionary/_posts/2021-08-17-zshrc.md
@@ -1,7 +1,7 @@
 ---
 sidebar:
-  title: "Clean Code / Dictionary / zshrc"
-  nav: sidebar-clean-code
+  title: "Clean"
+  nav: sidebar-clean
 ---
 
 * shell 의 종류 중 하나
