--- a/clean/dictionary/_posts/2021-08-19-aka.md
+++ b/clean/dictionary/_posts/2021-08-19-aka.md
@@ -1,8 +1,8 @@
 ---
 title: "A.K.A"
 sidebar:
-  title: "Clean Code"
-  nav: sidebar-clean-code
+  title: "Clean"
+  nav: sidebar-clean
 ---
 
 - 'Also Known As'의 줄임말
