--- a/clean/dictionary/_posts/2021-08-19-asap.md
+++ b/clean/dictionary/_posts/2021-08-19-asap.md
@@ -1,8 +1,8 @@
 ---
 title: "ASAP"
 sidebar:
-  title: "Clean Code"
-  nav: sidebar-clean-code
+  title: "Clean"
+  nav: sidebar-clean
 ---
 
 - 'As soon as possible'의 줄임말
