--- a/clean/dictionary/_posts/2021-08-19-brb.md
+++ b/clean/dictionary/_posts/2021-08-19-brb.md
@@ -1,8 +1,8 @@
 ---
 title: "BRB"
 sidebar:
-  title: "Clean Code"
-  nav: sidebar-clean-code
+  title: "Clean"
+  nav: sidebar-clean
 ---
 
 - 'Be right back'의 줄임말
