--- a/clean/dictionary/_posts/2021-08-19-nvm.md
+++ b/clean/dictionary/_posts/2021-08-19-nvm.md
@@ -1,8 +1,8 @@
 ---
 title: "Nvm"
 sidebar:
-  title: "Clean Code"
-  nav: sidebar-clean-code
+  title: "Clean"
+  nav: sidebar-clean
 ---
 
 - 'Never mind'의 줄임말
