--- a/clean/dictionary/_posts/2021-08-19-omw.md
+++ b/clean/dictionary/_posts/2021-08-19-omw.md
@@ -1,8 +1,8 @@
 ---
 title: "OMW"
 sidebar:
-  title: "Clean Code"
-  nav: sidebar-clean-code
+  title: "Clean"
+  nav: sidebar-clean
 ---
 
 - ''On my way'의 줄임말
