[Feat] 이전 블로그 글 몇 가지 옮김

--- a/git/commend/_posts/2021-08-17-reset.md
+++ b/git/commend/_posts/2021-08-17-reset.md
@@ -6,7 +6,7 @@ title: "Reset"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : "commit한 이전 코드 취소하기, 특정 시점으로 돌아가는 이력자체도 남지 않고 이동"
+excerpt : "[Git] pull 강제로 받기, commit한 이전 코드 취소하기, 특정 시점으로 돌아가는 이력자체도 남지 않고 이동"
 ---
 [Git](/git/) / [Commend](/git/commend/) / **Reset**
 {: .notice--warning}
@@ -51,5 +51,14 @@ git reset <head>
 ```
 git reset HEAD~6
 ```
+
+## 5. Git pull 강제로 받기
+- Git 를 쓰다 보면, origin master 와 local git 의 매칭이 안될 때가 있다. 
+- 이때 pull 명령시 에러가 날 수 있다.
+```
+git reset --hard HEAD 
+git pull origin master
+```
+![Image](https://drive.google.com/uc?export=view&id=1-By92enkshS0ZvgQBWfXB3RExlKi6mmJ)
 
 {% include utteranc.html %}
