스택 관련 나무위키 일단 퍼옴 ㅠㅠ

--- a/git/blog/_posts/2021-08-18-start.md
+++ b/git/blog/_posts/2021-08-18-start.md
@@ -57,9 +57,16 @@ commend + c
     * post 나 navigation 을 수정하면 재시작이 필요없다.
 - 브라우저에서 접속해보자.
 ```
-http://127.0.0.1:4000
+http://127.0.0.1:4000/
+또는
+http://localhost:4000/
 ```
 여기 까지 된다면 성공!
+이후 부턴 
+```
+jekyll serve
+```
+로 서버를 실행할 수 있다!
 
 ## 4. Repo 에 Push 하기
 ```
