--- a/swift/4.0/_posts/2009-05-15-release.md
+++ b/swift/4.0/_posts/2009-05-15-release.md
@@ -20,10 +20,7 @@ tags:
 
 ## 소주제1
 
-<figure class="video_container">
-<iframe src="https://swift.org/blog/swift-4-0-released"></iframe>
-</figure>
-
+<iframe src="/clean/dictionary/stack-overflow/" style="display:block; width:50vw; height: 50vh"></iframe>
 
 
 
