--- a/algorithm/data-structure/_posts/2021-08-17-stack.md
+++ b/algorithm/data-structure/_posts/2021-08-17-stack.md
@@ -2,23 +2,71 @@
 sidebar:
   title: "Algorithm"
   nav: sidebar-algorithm
-title: "Algorithm / Data Structure / Stack"
-categories: data-structure
+title: "Stack"
 toc: true
 toc_sticky: true
 toc_label: 목차
+excerpt : 스택은 일종의 바닥이 막힌 상자라고 보면 된다.
 ---
+[Algorithm](/algorithm/) / [Data Structure](/algorithm/data-structurey/) / **{{ page.title }}**
+{: .notice--warning}
 
-첫번째 포스트를 작성하고 있다.
+## 1. 개요
 
-## 개요
+- 스택은 일종의 바닥이 막힌 상자라고 보면 된다. 나중에 넣은 물건이 위에 있으므로 먼저 꺼낼 수밖에 없다.
+- LIFO 특성을 가지는 자료구조(Data Structure)를 일컫는다. 
+- 메모리에 새로 들어오는 데이터의 위치가 메모리 말단 탑이고, 써먹기 위해 내보내는 데이터 역시 메모리 말단을 거친다. 
+- 스택의 추상자료형(Abstract Data Type—ADT)을 살펴보면, 입력연산은 Push, 출력연산은 Pop이라고 부른다. 
+- 조회연산은 Peek이라고 하는데, 탑 포인터가 가리키는 데이터를 조회(확인)만 할 뿐, 탑의 인덱스는 변화시키지 않는 연산을 의미한다.
+- 스택이라는 자료구조는 프로세스를 구성하는 4개의 요소 중 한 부분이며 함수의 호출에 관여한다.
 
-Just
+## 2. 역사
+스택의 역사를 짚어 보면 1946년 앨런 튜링(Alan Turing)까지 거슬러 올라간다. 당시 앨런 튜링은 서브루틴을 호출하는 과정을 버리(bury), 되돌아오는 과정을 언버리(unbury)라고 불렀는데, 이 것을 스택의 기원이라고도 한다. 스택은 콜 스택(Call Stack)이라 하여 컴퓨터 프로그램의 서브루틴에 대한 정보를 저장하는 자료구조에도 널리 활용된다. 컴파일러가 출력하는 에러도 스택처럼 맨 마지막 에러가 가장 먼저 출력되는 순서를 보인다. 또한 스택은 메모리 영역에서 LIFO 형태로 할당하고 접근하는 구조인 아키텍처 레벨의 하드웨어 스택의 이름으로도 널리 사용된다. 이외에도 꽉 찬 스택에 요소를 삽입하고자 할 때 스택에 요소가 넘쳐서 에러가 발생하는 것을 스택 버퍼 오버플로(Stack Buffer Overflow)라고 부른다. 개발자들이 즐겨 이용하는 질의응답 서비스 사이트인 스택 오버플로의 명칭 또한 여기서 유래했다.
+
+
+## 3. 종류
+- 스택은 힙 영역 메모리에서 일반적인 데이터를 저장하는 스택
+- 스택 영역 메모리에서 프로그램의 각 분기점에 변수와 같은 정보를 저장하기 위한 스택
+
+이것도 종류를 나눌 수 있는데,
+Ascending stack VS Descending stack
+Empty stack VS Full stack
+
+## 4. 구현
+![Image](https://w.namu.la/s/c73dbaa0dd753939d19a0464feb000054317cdab2c8d80ff0b525b05503286c12d3160df5f8c3352802a01671f85f724f62065d7a97ce0d25082cfaac8553cb7bd603179dd0872984fd69bee2f43fc6b37f460244ce8fbdc625aa88e4774ceb6128578eeea5e0636f14e46311d9501fb)
+- 배열을 이용한 구현
 
 ```swift
-Observable.just("hello blog")
+
 ```
 
-이 문서의 title은 '{{ page.title }}' 이다!
+- LinkedList 를 이용한 구현
 
-다음 문서의 title은 '{{ page.title | append: "에 이어 두번째 포스트" }}' 이다!
+```swift
+
+```
+
+## 5. 응용
+- 함수가 함수를 호출하거나 자기 자신을 호출하는 것도 스택에 기반을 두고 있다.
+
+
+- 현대 CPU는 어셈블리어에 스택 영역을 제어하는 명령이 있다.
+- 한 프로그램이 사용하는 스택 영역은 기본적으로 크기가 고정되어 있다.
+
+- 어떤 함수든 호출되는 순간 스택에 그 함수를 위한 영역(스택 프레임 stack frame)이 할당됨
+- 함수가 호출될 때마다 스택에 값들이 쌓이고, 계산이 끝나면 다시 하나씩 빼면서 출력값이 가장 밑에 있던 리턴 공간으로 돌아오는 것이다. 
+- 재귀가 연산속도에서 불리한 점이 발생함
+- 재귀 알고리즘을 사용할 때는 반드시 재귀 알고리즘이 필요한지 설계를 먼저 정확히 하는 것이 중요하다.
+
+---
+
+
+
+## 6. 스택 오버 플로
+- 스택을 흔히 크기를 고정하여서 사용하기 때문에, 이를 다 사용하면 넘치게 된다. 
+- 이에 대한 적당한 대처방안이 준비되어 있지 않으면 다른 메모리 영역을 침범할 수 있게 된다. 
+- 이런 현상 또는 이를 이용한 해킹 기법이 스택 오버플로이다.
+
+출처 : [나무위키 - 스택(자료구조) ](https://namu.wiki/w/%EC%8A%A4%ED%83%9D(%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0)){:target="_blank"}
+
+{% include utteranc.html %}
