--- a/algorithm/programers-level1/_posts/2021-08-22-prime.md
+++ b/algorithm/programers-level1/_posts/2021-08-22-prime.md
@@ -26,15 +26,13 @@ excerpt : 1부터 입력받은 숫자 n 사이에 있는 소수의 개수를 반
 ```swift
 Input: 10
 Output: 4
+Explanation: 1부터 10 사이의 소수는 [2,3,5,7] 4개가 존재하므로 4를 반환
 ```
-* 1부터 10 사이의 소수는 [2,3,5,7] 4개가 존재하므로 4를 반환
-
-
 ```swift
 Input: 5
 Output: 3
+Explanation: 1부터 5 사이의 소수는 [2,3,5] 3개가 존재하므로 3를 반환
 ```
-* 1부터 5 사이의 소수는 [2,3,5] 3개가 존재하므로 3를 반환
     
 [풀러가기](https://programmers.co.kr/learn/courses/30/lessons/12921#)
 
