[Post] add performance-fp

--- a/ios/uiresponder/uiview/_posts/2021-08-23-bounds.md
+++ b/ios/uiresponder/uiview/_posts/2021-08-23-bounds.md
@@ -6,7 +6,7 @@ title: "bounds"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : HTTP HTTP Liv
+excerpt : 자신 기준
 ---
 [iOS](/ios/) / [UIResponder](/uiresponder/) / [UIView](/uiview/)  /**{{ page.title }}**
 {: .notice--warning}
