--- a/ios/uiresponder/uiview/_posts/2021-08-23-frame.md
+++ b/ios/uiresponder/uiview/_posts/2021-08-23-frame.md
@@ -6,7 +6,7 @@ title: "frame"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : HTTP HTTP Liv
+excerpt : SuperView 기준
 ---
 [iOS](/ios/) / [UIResponder](/uiresponder/) / [UIView](/uiview/)  /**{{ page.title }}**
 {: .notice--warning}
