[Post] app thinning 추가

--- a/ios/uiresponder/uiview/_posts/2021-08-23-bounds.md
+++ b/ios/uiresponder/uiview/_posts/2021-08-23-bounds.md
@@ -27,6 +27,7 @@ excerpt : 자신 기준
 - 뷰를 회전시키더라도 자체 **사이즈**를 반환
 
 - 출처: 
+- [developer.apple.com](https://developer.apple.com/documentation/uikit/uiview/1622580-bounds)
 - [개발자 소들이 - iOS) Frame vs Bounds 제대로 이해하기 (1/3)](https://babbab2.tistory.com/44)
 - [개발자 소들이 - iOS) Frame vs Bounds 제대로 이해하기 (2/3)](https://babbab2.tistory.com/45)
 - [개발자 소들이 - iOS) Frame vs Bounds 제대로 이해하기 (3/3)](https://babbab2.tistory.com/46)
