--- a/ios/uiresponder/uiview/_posts/2021-08-23-frame.md
+++ b/ios/uiresponder/uiview/_posts/2021-08-23-frame.md
@@ -8,7 +8,7 @@ toc_sticky: true
 toc_label: 목차
 excerpt : SuperView 기준
 ---
-[iOS](/ios/) / [UIResponder](/uiresponder/) / [UIView](/uiview/)  /**{{ page.title }}**
+[iOS](/ios/) / [UIResponder](/ios/uiresponder/) / [UIView](/ios/uiresponder/uiview/)  / **{{ page.title }}**
 {: .notice--warning}
 
 ## 1. 개요
