--- a/swift/closure/_posts/2021-08-23-escaping.md
+++ b/swift/closure/_posts/2021-08-23-escaping.md
@@ -6,11 +6,13 @@ title: "@escaping"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : 해당 함수의 인자로 클로저가 전달되지만, 함수가 반환된 후 실행 되는 것을 의미합니다.
+excerpt : 해당 함수의 인자로 클로저가 전달되지만, 함수가 종료되어도 실행 되는 것을 보장한다. 
 ---
 [Swift](/swift/) / [closure](/swift/closure/) / **{{ page.title }}**
 {: .notice--warning}
 
 ## 1. 개요
-클로저가 함수로부터 Escape한다는 것은 해당 함수의 인자로 클로저가 전달되지만, 함수가 반환된 후 실행 되는 것을 의미합니다.
+해당 함수의 인자로 클로저가 전달되지만, 함수가 종료되어도 실행 되는 것을 보장한다. 
+즉 함수의 scope 밖에서 실행이 가능하다.
+
 
