--- a/ios/uiresponder/uiview/_posts/2021-08-23-draw-rect.md
+++ b/ios/uiresponder/uiview/_posts/2021-08-23-draw-rect.md
@@ -13,21 +13,22 @@ excerpt : 전달된 rect 내에서 receiver(수신자)의 이미지를 그린다
 
 ## 1. 개요
 
-- 전달된 rect 내에서 receiver(수신자)의 이미지를 그린다.
+- 전달된 CGRect 의 영역에 대해 뷰를 다시 그릴때 호출된다.
 
 
 ## 2. rect: CGRect
-- 업데이트해야하는 View의 bounds일부입니다. 
-- 처음으로 View를 그릴 때, 이 사각형은 일반적으로 View의 전체 범위입니다. 
-- 그러나 이후의 그리기 작업중에서의 사각형은 View의 일부만 지정할 수 있습니다.
+- 첫 호출 시 rect 의 범위는 View의 bounds 의 비율이 된다. 
+- 그러나 이후 호출 될때 rect 의 범위는 View의 일부만 지정 될 수도 있다.
 
-## 3. 재정의가 필요한 경우
-- Core Graphics 및 UIKit과 같은 기술을 사용하여 뷰의 내용을 그리는 하위 클래스는이 메서드를 재정의하고 해당 드로잉 코드를 구현해야합니다.
-- 다른 View클래스를 하위 클래스화 하는 경우, 구현의 어느 시점에서 super를 호출해야합니다.
+## 3. 사용이 필요할 경우
+- Core Graphics 및 UIKit과 같은 기술을 사용하여 뷰의 내용을 그리는 드로잉 코드를 구현해야할때.
+- UIGraphicsGetCurrentContext() 를 얻을 수 있다.
 
 ## 4. 주의
-- **직접 이 메소드를 호출하면 안됩니다.** 
+- **직접 이 메소드를 호출하면 안된다.** 
 - [setNeedsDisplay()](/ios/uiresponder/uiview/setNeedsDisplay) 또는 setNeedsDisplay(_ :) 로 호출하자.
 
+- **draw 메서드 내에서 super 를 호출할 필요는 없다**. 하지만 만약 View 가 다른 View 를 상속하게 된다면, draw 메서드 구현부의 적절한 위치레 super를 호출해주어야 한다.
 
-출처: [ZeddiOS](https://zeddios.tistory.com/359)
+
+출처: [applebuddy](https://0urtrees.tistory.com/157)
