--- a/ios/uiresponder/uiview/_posts/2021-08-23-draw-rect.md
+++ b/ios/uiresponder/uiview/_posts/2021-08-23-draw-rect.md
@@ -6,7 +6,7 @@ title: "draw(_ rect: CGRect)"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : 전달된 rect 내에서 receiver(수신자)의 이미지를 그린다.
+excerpt : 전달된 CGRect 의 영역에 대해 뷰를 다시 그릴때 호출된다.
 ---
 [iOS](/ios/) / [UIResponder](/ios/uiresponder/) / [UIView](/ios/uiresponder/uiview/)  / **{{ page.title }}**
 {: .notice--warning}
