--- a/swift/closure/_posts/2021-08-23-currying.md
+++ b/swift/closure/_posts/2021-08-23-currying.md
@@ -8,7 +8,7 @@ toc_sticky: true
 toc_label: 목차
 excerpt : Reference type 이다.
 ---
-[Swift](/swift/) / [closure](/swift/closure/) / **{{ page.title }}**
+[Swift](/swift/) / [Closure](/swift/closure/) / **{{ page.title }}**
 {: .notice--warning}
 
 ## 1. 개요
