--- a/swift/closure/_posts/2021-08-23-escaping.md
+++ b/swift/closure/_posts/2021-08-23-escaping.md
@@ -8,7 +8,7 @@ toc_sticky: true
 toc_label: 목차
 excerpt : 해당 함수의 인자로 클로저가 전달되지만, 함수가 종료되어도 실행 되는 것을 보장한다. 
 ---
-[Swift](/swift/) / [closure](/swift/closure/) / **{{ page.title }}**
+[Swift](/swift/) / [Closure](/swift/closure/) / **{{ page.title }}**
 {: .notice--warning}
 
 ## 1. 개요
