--- a/swift/data-type/_posts/2021-09-02-boxing.md
+++ b/swift/data-type/_posts/2021-09-02-boxing.md
@@ -8,7 +8,7 @@ toc_sticky: true
 toc_label: 목차
 excerpt : value type 을 reference type 으로 변경하는 것을 Boxing, reference type 을 value type 으로 변경하는 것을 Unboxing 이라 한다.
 ---
-[swift](/swift/) / [Data Type](/swift/data-type/) / **{{ page.title }}**
+[Swift](/swift/) / [Data Type](/swift/data-type/) / **{{ page.title }}**
 {: .notice--warning}
 
 ## 1. 개요
