[Style] NSObject iOS tab 으로 이동

--- a/ios/nsobject/_posts/2021-08-23-nsnull.md
+++ b/ios/nsobject/_posts/2021-08-23-nsnull.md
@@ -1,14 +1,14 @@
 ---
 sidebar:
-  title: "Swift"
-  nav: sidebar-swift
+  title: "iOS"
+  nav: sidebar-ios
 title: nil, Nil, NULL, NSNull 대한 차이
 toc: true
 toc_sticky: true
 toc_label: 목차
 excerpt : Objective-C 에서 사용할 수 없는 번지를 가리키는 포인터(pointer) 의 부재
 ---
-[Swift](/swift/) / [NSObject](/swift/nsobject/) / **{{ page.title }}**
+[iOS](/ios/) / [NSObject](/ios/nsobject/) / **{{ page.title }}**
 {: .notice--warning}
 
 ## 1. 개요
