[Post] compare-option 추가

--- a/swift/StringProtocol/_posts/2021-09-04-compare.md
+++ b/swift/StringProtocol/_posts/2021-09-04-compare.md
@@ -2,13 +2,13 @@
 sidebar:
   title: "Swift"
   nav: sidebar-swift
-title: "compare(_:options:range:locale:)"
+title: "compare(_:)"
 toc: true
 toc_sticky: true
 toc_label: 목차
 excerpt : ComparisonResult 를 사용하여 문자열을 비교한다. 
 ---
-[Swift](/swift/) / [StringProtocol](/swift/StringProtocol/) / **{{ page.title }}**
+[Swift](/swift/) / [StringProtocol](/swift/stringprotocol/) / **{{ page.title }}**
 {: .notice--warning}
 
 ## 1. 개요
