[Fix] 신규 Post 링크 누락 추가

--- a/clean/dictionary/_posts/2021-09-05-ascii-art.md
+++ b/clean/dictionary/_posts/2021-09-05-ascii-art.md
@@ -8,6 +8,9 @@ toc_sticky: true
 toc_label: 목차
 excerpt : 텍스트와 특수문자를 조합해서 사진과 그림을 표현한 것.
 ---
+[Clean](/clean/) / [Dictionary](/clean/dictionary/) / **{{ page.title }}**
+{: .notice--warning}
+
 
 ## 1. 개요
 
