--- a/clean/dictionary/_posts/2021-09-05-ham-radio.md
+++ b/clean/dictionary/_posts/2021-09-05-ham-radio.md
@@ -8,6 +8,9 @@ toc_sticky: true
 toc_label: 목차
 excerpt : 취미 활동으로 즐기는 아마추어 무선 통신
 ---
+[Clean](/clean/) / [Dictionary](/clean/dictionary/) / **{{ page.title }}**
+{: .notice--warning}
+
 
 ## 1. 개요
 
