--- a/clean/dictionary/_posts/2021-09-05-react.md
+++ b/clean/dictionary/_posts/2021-09-05-react.md
@@ -8,6 +8,9 @@ toc_sticky: true
 toc_label: 목차
 excerpt : 사용자 인터페이스 개발을 위해 페이스북에서 만들고 공개한 오픈소스 자바스크립트 라이브러리
 ---
+[Clean](/clean/) / [Dictionary](/clean/dictionary/) / **{{ page.title }}**
+{: .notice--warning}
+
 
 ## 1. 개요
 
