[Style] format 일관성 맞추기

--- a/clean/dictionary/_posts/2021-08-17-stack.md
+++ b/clean/dictionary/_posts/2021-08-17-stack.md
@@ -1,7 +1,14 @@
 ---
 sidebar:
   title: "Clean"
-  nav: sidebar-clean
+nav: sidebar-clean
+title: "Stack"
+toc: true
+toc_sticky: true
+toc_label: 목차
+excerpt : 일시적으로 보존하고 싶은 데이터를 차례로 겹쳐 쌓듯이 수납해 가는 기억 장치
 ---
+[Clean](/clean/) / [Dictionary](/clean/dictionary/) / **{{ page.title }}**
+{: .notice--warning}
 
 [명사] (컴퓨터) 스택(일시적으로 보존하고 싶은 데이터를 차례로 겹쳐 쌓듯이 수납해 가는 기억 장치)
