--- a/clean/dictionary/_posts/2021-08-17-zshrc.md
+++ b/clean/dictionary/_posts/2021-08-17-zshrc.md
@@ -2,7 +2,16 @@
 sidebar:
   title: "Clean"
   nav: sidebar-clean
+title: "zshrc"
+toc: true
+toc_sticky: true
+toc_label: 목차
+excerpt : 텍스트와 특수문자를 조합해서 사진과 그림을 표현한 것.
 ---
+[Clean](/clean/) / [Dictionary](/clean/dictionary/) / **{{ page.title }}**
+{: .notice--warning}
+
+## 1. 개요
 
 * shell 의 종류 중 하나
 * login 여부와 상관없이 항상 실행 됨
