--- a/clean/dictionary/_posts/2021-08-19-asap.md
+++ b/clean/dictionary/_posts/2021-08-19-asap.md
@@ -1,9 +1,18 @@
 ---
-title: "ASAP"
 sidebar:
   title: "Clean"
   nav: sidebar-clean
+title: "ASAP"
+toc: true
+toc_sticky: true
+toc_label: 목차
+excerpt : 가능한 한, 급히
 ---
+[Clean](/clean/) / [Dictionary](/clean/dictionary/) / **{{ page.title }}**
+{: .notice--warning}
+
+
+## 1. 개요
 
 - 'As soon as possible'의 줄임말
 - '가능한 한', '급히'
