--- a/clean/dictionary/_posts/2021-08-19-brb.md
+++ b/clean/dictionary/_posts/2021-08-19-brb.md
@@ -1,9 +1,18 @@
 ---
-title: "BRB"
 sidebar:
   title: "Clean"
   nav: sidebar-clean
+title: "BRB"
+toc: true
+toc_sticky: true
+toc_label: 목차
+excerpt : 기다려 곧 올게
 ---
+[Clean](/clean/) / [Dictionary](/clean/dictionary/) / **{{ page.title }}**
+{: .notice--warning}
+
+
+## 1. 개요
 
 - 'Be right back'의 줄임말
 - '기다려 곧 올게'
