--- a/clean/dictionary/_posts/2021-08-19-given.md
+++ b/clean/dictionary/_posts/2021-08-19-given.md
@@ -2,7 +2,17 @@
 sidebar:
   title: "Clean"
   nav: sidebar-clean
+title: "Given"
+toc: true
+toc_sticky: true
+toc_label: 목차
+excerpt : (이미) 정해진
 ---
+[Clean](/clean/) / [Dictionary](/clean/dictionary/) / **{{ page.title }}**
+{: .notice--warning}
+
+
+## 1. 개요
 
 - [형용사] 
 - (이미) 정해진
