--- a/clean/dictionary/_posts/2021-08-19-omw.md
+++ b/clean/dictionary/_posts/2021-08-19-omw.md
@@ -1,9 +1,18 @@
 ---
-title: "OMW"
 sidebar:
   title: "Clean"
   nav: sidebar-clean
+title: "OMW"
+toc: true
+toc_sticky: true
+toc_label: 목차
+excerpt : On my way의 줄임말, 가는 중이야
 ---
+[Clean](/clean/) / [Dictionary](/clean/dictionary/) / **{{ page.title }}**
+{: .notice--warning}
+
+
+## 1. 개요
 
 - ''On my way'의 줄임말
 - '가는 중이야'
