--- a/clean/dictionary/_posts/2021-08-17-bashrc.md
+++ b/clean/dictionary/_posts/2021-08-17-bashrc.md
@@ -1,7 +1,17 @@
 ---
 sidebar:
   title: "Clean Code"
-  nav: sidebar-clean
+nav: sidebar-clean
+title: "bashrc"
+toc: true
+toc_sticky: true
+toc_label: 목차
+excerpt : 새로운 터미널을 열 때마다 정보를 받고 싶을 때 필요
 ---
+[Clean](/clean/) / [Dictionary](/clean/dictionary/) / **{{ page.title }}**
+{: .notice--warning}
 
-* 새로운 터미널을 열 때마다 정보를 받고 싶을 때 필요
+
+## 1. 개요
+
+새로운 터미널을 열 때마다 정보를 받고 싶을 때 필요
