--- a/clean/dictionary/_posts/2021-08-17-jekyll.md
+++ b/clean/dictionary/_posts/2021-08-17-jekyll.md
@@ -3,7 +3,16 @@ sidebar:
   title: "Clean"
   nav: sidebar-clean
 title: "Jekyll"
+toc: true
+toc_sticky: true
+toc_label: 목차
+excerpt : 텍스트와 특수문자를 조합해서 사진과 그림을 표현한 것.
 ---
+[Clean](/clean/) / [Dictionary](/clean/dictionary/) / **{{ page.title }}**
+{: .notice--warning}
 
-- Jekyll은 개인, 프로젝트 또는 조직 사이트를위한 간단한 블로그 인식 정적 사이트 생성기입니다. 
-- GitHub의 공동 설립자 인 Tom Preston-Werner가 루비로 작성했으며 오픈 소스 MIT 라이센스에 따라 배포됩니다.
+
+## 1. 개요
+
+- Jekyll은 개인, 프로젝트 또는 조직 사이트를위한 간단한 블로그 인식 정적 사이트 생성기다. 
+- GitHub의 공동 설립자 인 Tom Preston-Werner가 루비로 작성했으며 오픈 소스 MIT 라이센스에 따라 배포된다.
