--- a/swift/inheritance/_posts/2021-09-07-final.md
+++ b/swift/inheritance/_posts/2021-09-07-final.md
@@ -138,7 +138,7 @@ private 과 final 은 컴파일러 최적화가 가능하다.
 
 ## 8. 클린 코드의 관점
 기본적으로 코드 가독성을 해지지 않고 명시한 부분에 사용 정의하는게 좋다.
-지나친 남용은 코드의 readabiliy 를 해칠 것이고 동료 개발자와 합의가 필요할 것이다.
+지나친 남용은 코드의 readability 를 해칠 것이고 동료 개발자와 합의가 필요할 것이다.
 코드 리뷰를 진행한다면 자연스럽게 논의가 되며 합의점을 찾을 수 있다.
 
 [참고- developer.apple.com/swift/blog/](https://developer.apple.com/swift/blog/)
