[Style] 코드 줄바꿈 처리

--- a/algorithm/solved-silver1/_posts/2021-09-09-2447.md
+++ b/algorithm/solved-silver1/_posts/2021-09-09-2447.md
@@ -89,11 +89,20 @@ func blank(i: Int,
   }
   
   if i + num * 3 < input {
-    blank(i: i + num * 3, j: j, num: num, input: input, array: &array, dp: &dp)
+    blank(i: i + num * 3, 
+          j: j, num: num, 
+          input: input, 
+          array: &array, 
+          dp: &dp)
   }
   
   if j + num * 3 < input {
-    blank(i: i, j: j + num * 3, num: num, input: input, array: &array, dp: &dp)
+    blank(i: i, 
+          j: j + num * 3, 
+          num: num, 
+          input: input, 
+          array: &array, 
+          dp: &dp)
   }
 }
 
