--- a/algorithm/solved-silver1/_posts/2021-09-09-2447.md
+++ b/algorithm/solved-silver1/_posts/2021-09-09-2447.md
@@ -133,7 +133,13 @@ for i in stride(from: 0, to: input, by: 3) {
 ```
 
 ## 5. 풀이
--
+별을 찍는 것이 아닌 배열을 별로 초기화 하고 공백을 찍는 형태로 접근했다.
+계속 시도하다 보니 패턴이 보였고, 큰 네모부터 없애면서 작은 공백을 찍도록 했다.
+시간 초과가 발생해 dp 배열을 이용해 체크하는 형태로 접근했다.
+
+>dp 배열은 없어도 될 것 같다.
+
+![Image](https://drive.google.com/uc?export=view&id=1lGWXAmkPVx0mWFA0L29NzTDqamCQa_WI)
 
 ## 6. 다른 분의 멋진 코드
 - [nupic7](https://www.acmicpc.net/user/nupic7)
