--- a/clean/dictionary/_posts/2021-08-17-bashrc.md
+++ b/clean/dictionary/_posts/2021-08-17-bashrc.md
@@ -1,7 +1,7 @@
 ---
 sidebar:
-  title: "Clean Code"
-nav: sidebar-clean
+  title: "Clean"
+  nav: sidebar-clean
 title: "bashrc"
 toc: true
 toc_sticky: true
