--- a/clean/dictionary/_posts/2018-08-10-bi.md
+++ b/clean/dictionary/_posts/2018-08-10-bi.md
@@ -1,12 +1,12 @@
 ---
 sidebar:
-  title: "Clean Code"
-nav: sidebar-clean
-title: "ebitbat"
+  title: "Clean"
+  nav: sidebar-clean
+title: "bi"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : 회사의 목표중에 손익 목표
+excerpt : MD 별 매출, 구매자수 통계 등의 룰
 ---
 [Clean](/clean/) / [Dictionary](/clean/dictionary/) / **{{ page.title }}**
 {: .notice--warning}
@@ -14,4 +14,4 @@ excerpt : 회사의 목표중에 손익 목표
 
 ## 1. 개요
 
-회사의 목표중에 손익 목표
+MD 별 매출, 구매자수 통계 등의 룰
