--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,4 +5,7 @@ sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist.
+죄송합니다. 해당 링크는 존재하지 않습니다.
+해당 글을 비공개 하였거나 삭제 되었을 수 있습니다.
+
+[홈으로 가기](/)
