[Feat] Depth Bar 생성

--- a/algorithm/solved-gold4/_posts/2021-09-10-2448.md
+++ b/algorithm/solved-gold4/_posts/2021-09-10-2448.md
@@ -2,11 +2,19 @@
 sidebar:
   title: "Algorithm"
   nav: sidebar-algorithm
-title: "2448 별 찍기 - 11"
+  icon: "fas fa-calculator"
+title: "[Swift] 2448 별 찍기 - 11"
 toc: true
 toc_sticky: true
 toc_label: 목차
 excerpt : 예제를 보고 규칙을 유추한 뒤에 별을 찍어 보세요.
+depth: 
+  - title: "Algorithm"
+    url: /algorithm/
+    icon: "far fa-folder-open"
+  - title: "Solved - Gold 4"
+    url: /algorithm/solved-gold4/
+    icon: "far fa-folder-open"
 ---
 [Algorithm](/algorithm/) / [Solved - Gold 4](/algorithm/solved-gold4/) / **{{ page.title }}**
 {: .notice--warning}
