[Fix] 신규 포맷 으로 변경

--- a/algorithm/baekjoon/_posts/2021-09-09-fileio.md
+++ b/algorithm/baekjoon/_posts/2021-09-09-fileio.md
@@ -2,22 +2,25 @@
 sidebar:
   title: "Algorithm"
   nav: sidebar-algorithm
-title: "빠른 입출력 - FileIO"
+  icon: "fas fa-calculator"
+title: "[Swift] 빠른 입출력(fread) - FileIO"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : ps할 때 입력을 한꺼번에 받기 위한 유틸리티 클래스. fread의 swift 버전.
+
+depth: 
+  - title: "Algorithm"
+    url: /algorithm/
+    icon: "fas fa-calculator"
+  - title: "BEAKJOON"
+    url: /algorithm/baekjoon/
+    icon: "far fa-folder-open"
 ---
-[Algorithm](/algorithm/) / [BEAKJOON](/algorithm/baekjoon/) / **{{ page.title }}**
-{: .notice--warning}
-![](https://d2gd6pc034wcta.cloudfront.net/images/logo@2x.png)
+기본 readLine()의 속도가 느려 백준에서 시간초과시 해결 가능하다.
 
 ## 1. 개요
+ps할 때 입력을 한꺼번에 받기 위한 유틸리티 클래스. fread의 swift 버전.  
 라이노님이 작성하신 코드
 
-ps할 때 입력을 한꺼번에 받기 위한 유틸리티 클래스. fread의 swift 버전.
-
->readLine() 속도가 느려 백준에서 시간초과시 해결 가능하다.
-
-## 2. Code
+## 2. 코드 및 사용법
 <script src="https://gist.github.com/JCSooHwanCho/30be4b669321e7a135b84a1e9b075f88.js"></script>
