[Fix] 신규 포맷으로 변경

--- a/cs/cpu/_posts/2019-01-31-register.md
+++ b/cs/cpu/_posts/2019-01-31-register.md
@@ -2,44 +2,62 @@
 sidebar:
   title: "CS"
   nav: sidebar-cs
-title: "Register"
+  icon: "fas fa-microchip"
+title: "CPU Register"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : 
+depth: 
+  - title: "CS"
+    url: /cs/
+    icon: "fas fa-microchip"
+  - title: "CPU"
+    url: /cs/cpu/
+    icon: "far fa-folder-open"
 ---
-[CS](/cs/) / [CPU](/cs/cpu/) / **{{ page.title }}**
-{: .notice--warning}
 
-## 1. 개요
+컴퓨터 아키텍처에서 레지스터는 프로그램과 작업을 효율적으로 실행하는데 사용되는 매우 빠른 컴퓨터 메모리다.  
+
+
+![Image](https://drive.google.com/uc?export=view&id=1Rb4b1yy9lhP_CH9fSAE23sjlpzOOVhDn)
+
 중앙처리장치(CPU) 내에 위치한 기억장치로 많은 수의 레지스터를 CPU내에 포함시키는 것은 어렵기 때문에 특수 목적용 레지스터들과 몇몇 일반 목적용 레지스터만 존재한다.
 
+## 목적
+CPU 에서 처리할 데이터를 빠르게 검색한다. RAM 은 HDD 보다 비교적 빠르지만 CPU에겐 부족하다.
+따라 더 좋은 처리를 위해 미리 실행 될 RAM 에서 데이터를 가져올 수 있는 메모리다.
 
-## 2. 종류
-- PC (Program Counter)
-    * 다음 인출(Fetch) 될 명령어의 주소를 가지고 있는 레지스터
+## 캐시메모리
+레지스터 위에는 훨씬 빠른 케시 메모리가 있다.
 
- 
-
-- AC (Accumulator)
-    * 연산 결과 데이터를 일시적으로 저장하는 레지스터
-
- 
-
-- IR (Instruction Register)
-    * 가장 최근에 인출된 명령어(현재 실행 중인 명령어)가 저장되어 있는 레지스터
+## 종류
+### PC (Program Counter)
+다음 인출(Fetch) 될 명령어의 주소를 가지고 있는 레지스터
 
  
 
-- SR (Status Register)
-    * 현재 CPU 의 상태를 가지고 있는 레지스터
+### AC (Accumulator)
+연산 결과 데이터를 일시적으로 저장하는 레지스터
 
  
 
-- MAR (Memory Address Register) 
-    * PC 에 저장된 명령어 주소가 사용되기 전에 일시적으로 저장되는 주소 레지스터
+### IR (Instruction Register)
+가장 최근에 실행될 명령어(현재 실행 중인 명령어)가 저장되어 있는 레지스터
 
  
 
-- MBR (Memory Buffer Register) 
-    * 기억장치에 저장될 데이터 혹은 읽혀진 데이터가 일시적으로 저장되는 버퍼 레지스터
+### SR (Status Register)
+현재 CPU 의 상태를 가지고 있는 레지스터
+
+ 
+
+### MAR (Memory Address Register) 
+PC 에 저장된 명령어 주소가 사용되기 전에 일시적으로 저장되는 주소 레지스터
+
+ 
+
+### MBR (Memory Buffer Register) 
+기억장치에 저장될 데이터 혹은 읽혀진 데이터가 일시적으로 저장되는 버퍼 레지스터
+
+### GPR (General Purpose Registers)
+R0, R1, R2….Rn-1로 번호가 지정되며 진행 중인 작업 중에 임시 데이터를 저장하는 데 사용된다. 그 내용은 어셈블리 프로그래밍을 통해 액세스할 수 있다. 최신 CPU 아키텍처는 레지스터 간 주소 지정을 더 많이 사용할 수 있도록 더 많은 GPR을 사용하는 경향이 있으며, 이는 다른 [Addressing Modes](https://www.geeksforgeeks.org/addressing-modes/) 보다 비교적 빠르다 .
