[Fix] 신규 포맷으로 변경

--- a/clean/dictionary/_posts/2018-08-10-ebitbat.md
+++ b/clean/dictionary/_posts/2018-08-10-ebitbat.md
@@ -2,16 +2,17 @@
 sidebar:
   title: "Clean"
   nav: sidebar-clean
-title: "ebitbat"
+  icon: "fab fa-weixin"
+title: "Ebitbat"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : 회사의 목표중에 손익 목표
+depth: 
+  - title: "Clean"
+    url: /clean/
+    icon: "fab fa-weixin"
+  - title: "Dictionary"
+    url: /clean/dictionary/
+    icon: "far fa-folder-open"
 ---
-[Clean](/clean/) / [Dictionary](/clean/dictionary/) / **{{ page.title }}**
-{: .notice--warning}
-
-
-## 1. 개요
-
 회사의 목표중에 손익 목표
