--- a/clean/dictionary/_posts/2021-08-17-bashrc.md
+++ b/clean/dictionary/_posts/2021-08-17-bashrc.md
@@ -2,16 +2,17 @@
 sidebar:
   title: "Clean"
   nav: sidebar-clean
+  icon: "fab fa-weixin"
 title: "bashrc"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : 새로운 터미널을 열 때마다 정보를 받고 싶을 때 필요
+depth: 
+  - title: "Clean"
+    url: /clean/
+    icon: "fab fa-weixin"
+  - title: "Dictionary"
+    url: /clean/dictionary/
+    icon: "far fa-folder-open"
 ---
-[Clean](/clean/) / [Dictionary](/clean/dictionary/) / **{{ page.title }}**
-{: .notice--warning}
-
-
-## 1. 개요
-
 새로운 터미널을 열 때마다 정보를 받고 싶을 때 필요
