--- a/clean/dictionary/_posts/2021-09-05-ham-radio.md
+++ b/clean/dictionary/_posts/2021-09-05-ham-radio.md
@@ -2,16 +2,17 @@
 sidebar:
   title: "Clean"
   nav: sidebar-clean
+  icon: "fab fa-weixin"
 title: "햄(HAM) 라디오"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : 취미 활동으로 즐기는 아마추어 무선 통신
+depth: 
+  - title: "Clean"
+    url: /clean/
+    icon: "fab fa-weixin"
+  - title: "Dictionary"
+    url: /clean/dictionary/
+    icon: "far fa-folder-open"
 ---
-[Clean](/clean/) / [Dictionary](/clean/dictionary/) / **{{ page.title }}**
-{: .notice--warning}
-
-
-## 1. 개요
-
 취미 활동으로 즐기는 아마추어 무선 통신
