--- a/clean/dictionary/_posts/2018-08-10-bi.md
+++ b/clean/dictionary/_posts/2018-08-10-bi.md
@@ -2,16 +2,20 @@
 sidebar:
   title: "Clean"
   nav: sidebar-clean
-title: "bi"
+  icon: "fab fa-weixin"
+title: "BI"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : MD 별 매출, 구매자수 통계 등의 룰
+toc: true
+toc_sticky: true
+toc_label: 목차
+depth: 
+  - title: "Clean"
+    url: /clean/
+    icon: "fab fa-weixin"
+  - title: "Dictionary"
+    url: /clean/dictionary/
+    icon: "far fa-folder-open"
 ---
-[Clean](/clean/) / [Dictionary](/clean/dictionary/) / **{{ page.title }}**
-{: .notice--warning}
-
-
-## 1. 개요
-
 MD 별 매출, 구매자수 통계 등의 룰
