--- a/clean/dictionary/_posts/2021-09-05-ascii-art.md
+++ b/clean/dictionary/_posts/2021-09-05-ascii-art.md
@@ -2,18 +2,19 @@
 sidebar:
   title: "Clean"
   nav: sidebar-clean
+  icon: "fab fa-weixin"
 title: "ASCII Art"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : 텍스트와 특수문자를 조합해서 사진과 그림을 표현한 것.
+depth: 
+  - title: "Clean"
+    url: /clean/
+    icon: "fab fa-weixin"
+  - title: "Dictionary"
+    url: /clean/dictionary/
+    icon: "far fa-folder-open"
 ---
-[Clean](/clean/) / [Dictionary](/clean/dictionary/) / **{{ page.title }}**
-{: .notice--warning}
-
-
-## 1. 개요
-
 텍스트와 특수문자를 조합해서 사진과 그림을 표현한 것.
 
 [아스키 아트](https://ko.wikipedia.org/wiki/%EC%95%84%EC%8A%A4%ED%82%A4_%EC%95%84%ED%8A%B8)
