--- a/clean/english/_posts/2018-11-19-given.md
+++ b/clean/english/_posts/2018-11-19-given.md
@@ -3,7 +3,7 @@ sidebar:
   title: "Clean"
   nav: sidebar-clean
   icon: "fab fa-weixin"
-title: "zshrc"
+title: "Given"
 toc: true
 toc_sticky: true
 toc_label: 목차
@@ -11,9 +11,8 @@ depth:
   - title: "Clean"
     url: /clean/
     icon: "fab fa-weixin"
-  - title: "Dictionary"
-    url: /clean/dictionary/
+  - title: "English"
+    url: /clean/english/
     icon: "far fa-folder-open"
 ---
-shell 의 종류 중 하나.  
-login 여부와 상관없이 항상 실행 됨
+[형용사] (이미) 정해진
