[Fix] 신규 포맷으로 변경

--- a/git/blog/_posts/2021-08-18-start.md
+++ b/git/blog/_posts/2021-08-18-start.md
@@ -2,67 +2,85 @@
 sidebar:
   title: "Git"
   nav: sidebar-git
+  icon: "fab fa-github"
 title: "Github 블로그 시작하기"
 toc: true
 toc_sticky: true
 toc_label: 목차
+depth: 
+  - title: "Git"
+    url: /git/
+    icon: "fab fa-github"
+  - title: "Blog"
+    url: /git/blog/
+    icon: "far fa-folder-open"
 ---
-[Git](/git/) / [Blog](/git/blog/) / **Github 블로그 시작하기**
-{: .notice--warning}
-![](https://pages.github.com/images/logo.svg)
-## 1. 개요
-- 점점 머리가 나빠진다.
-- 나의 경우 글을 작성하고 다시 보고 하면서 반복적으로 봐야 공부가 된다.
-- Github 블로그가 있었지만 새로운 테마로 새롭게 시작하고 싶었다.
-- 그래서 기존 Repo 를 제거하고 새로운 테마를 적용하면서 히스토리를 기록하기로 했다.
-- 추가로 stackoverflow 의 취지가 동기부여 되었다.
+점점 머리가 나빠진다. 나의 경우 글을 작성하고 다시 보고 하면서 반복적으로 봐야 공부가 된다.  
+메모하는 습관을 다시 기르기 위해 2018년 ice bear 테마 Github 블로그를 구축했었으나 테마가 너무 좀.. 그래서.. 새로운 테마로 새롭게 시작하고 싶었다. 그래서 기존 Repo 를 과감하게 제거하고 새로운 테마를 적용하면서 히스토리를 기록하기로 했다.  
 
-## 2. Github 설정 하기
-- **네이밍에 유의**해서 Repo 를 만들자.
-    * ![이미지](https://drive.google.com/uc?export=view&id=1CuhXzbSrIdJjjs4DpbOl_O18oKV4FiL_)
+추가로 stackoverflow 의 취지가 동기부여 되었다.
 
-- 만들어진 Repo 의 **Settings** 에 들어가자.
-![이미지](https://drive.google.com/uc?export=view&id=1B7oWnapTLtdUxbpxS5EM26rrvRoHcnNb)
+## 1. Github 설정 하기
+![](https://pages.github.com/images/logo.svg)   
+GitHub 를 통한 블로그 생성은 Github Pages 라 한다.
 
-- Pages 에 가서 설정버튼 있다. 누르자! 완료!
+### 1.1 Repo 생성
+**네이밍에 유의**해서 Repo 를 만들자.  
+![이미지](https://drive.google.com/uc?export=view&id=1CuhXzbSrIdJjjs4DpbOl_O18oKV4FiL_)
+
+### 1.2 Settings 설정
+![이미지](https://drive.google.com/uc?export=view&id=1B7oWnapTLtdUxbpxS5EM26rrvRoHcnNb)  
+만들어진 Repo 의 **Settings** 에 들어가자.
+
 ![이미지](https://drive.google.com/uc?export=view&id=1Oza12viPs_E5xcz4SfGJslxuxgvA44Un)
+Pages 에 가면 설정버튼 있다. 누르자! 완료!
 
-## 3. 테마 설치
-* [Jekyll]( /clean-code/dictionary/jekyll/)  에 의해 구동된다. 설치하자
+## 2. 설치
+### 2.1 Jekyll 설치
+[Jekyll]( /clean-code/dictionary/jekyll/)  에 의해 구동된다. 설치하자
 ```
 gem install jekyll
 ```
-* 테마 선정 : minimal-mistakes [데모 보러 가기](https://jamstackthemes.dev/demo/theme/minimal-mistakes/)
+
+### 2.2 테마 고르기
+테마는 마음에 드는 것으로 선택하자. 검색하면 테마를 모아놓은 사이트가 **아주** 많다.  
+
+나의 테마 선정 : minimal-mistakes [<i class="fas fa-link"></i> 데모 보러 가기](https://jamstackthemes.dev/demo/theme/minimal-mistakes/){:target="_blank"}  
 ![이미지](https://drive.google.com/uc?export=view&id=1DbZRlyh1P4syKGbaQElM5LyS-kCpr_RO)
-- 테마는 마음에 드는 것으로 선택하자. 검색하면 테마를 모아놓은 사이트가 **아주** 많다.
 
-- [minimal-mistakes 의 설치 가이드](https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/)를 보면 각 설정이 있는데, 이는 테마 별로 비슷한 점도 있지만 다른 점도 있다. 이 부분은 **본인이 선정한 테마의 가이드**를 참고하는 것이 가장 좋다.
+[<i class="fas fa-link"></i> minimal-mistakes 의 설치 가이드](https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/){:target="_blank"}를 보면 각 설정이 있는데, 이는 테마 별로 비슷한 점도 있지만 다른 점도 있다. 이 부분은 **본인이 선정한 테마의 가이드**를 참고하는 것이 가장 좋다.  
 
-- bundler 를 설치하자. 로컬에서도 돌려볼 수 있기 때문에 매우 유용하다.
+### 2.3 bundler 설치
+bundler 를 설치하자. 로컬에서도 돌려볼 수 있기 때문에 매우 유용하다.
 ```
 gem install bundler
 ```
-- 만약 [FilePermissionError](https://jojoldu.tistory.com/288) 가 발생하면 해당 사이트를 참고하자.
-    * 해당 글을 보다보면 ..zshrc, .bashrc 와 같은 내용이 있는데 맥 터미널의 경우 상단 창에 표시가 됨을 참고하자.
-    * 더 자세한 사항은 [여기](https://vnthf.github.io/blog/bash/)를 참고하자.
-- 로컬 서버 실행
+>만약 FilePermissionError가 발생하면 [<i class="fas fa-link"></i> 해당 사이트](https://jojoldu.tistory.com/288){:target="_blank"}를 참고하자.<br/>
+해당 글을 보다보면 ..zshrc, .bashrc 와 같은 내용이 있는데 맥 터미널의 경우 상단 창에 표시가 된다.<br/>
+zshrc, .bashrc의 더 자세한 사항은 [<i class="fas fa-link"></i> 여기](https://vnthf.github.io/blog/bash/){:target="_blank"}를 참고하자.  
+
+## 3. 로컬 서버 실행
+config.yml 를 수정하면 재시작이 필요하다.  
+.md 파일이나 .html 파일을 수정하면 재시작이 필요없다.  
+
+### 3.1 로컬 서버 실행
 ```
 bundle exec jekyll serve
 ```
-- 로컬 서버 종료
+
+### 3.2 로컬 서버 종료
 ```
 commend + c
 ```
-    * 참고로 config.yml 를 수정하면 재시작이 필요하다.
-    * post 나 navigation 을 수정하면 재시작이 필요없다.
-- 브라우저에서 접속해보자.
+
+## 3. 브라우저 접속
 ```
 http://127.0.0.1:4000/
 또는
 http://localhost:4000/
 ```
-여기 까지 된다면 성공!
-이후 부턴 
+여기 까지 된다면 성공!  
+이후엔
 ```
 jekyll serve
 ```
@@ -70,27 +88,23 @@ jekyll serve
 
 ## 4. Repo 에 Push 하기
 ```
-git push
+git push origin master
 ```
-- 만약 Git Token 관련 [에러](https://github.blog/2020-12-15-token-authentication-requirements-for-git-operations/) 가 발생하면
-    * Settings - Developer settings - Personal access tokens - 생성 
-    * 이후 해당 키로 로그인을 하면 된다
-    * 해당 키는 안전한 곳에 백업이 필요하다.
-
-## 5. Google Search 등록
-[Google Search](https://search.google.com/search-console)
-![Image](https://drive.google.com/uc?export=view&id=1mutAhqrX3idmH9tR4ty3qwN7IFQM3HgX)
+>만약 [<i class="fas fa-link"></i> Git Token 관련 에러](https://github.blog/2020-12-15-token-authentication-requirements-for-git-operations/){:target="_blank"} 가 발생하면<br/>
+Settings - Developer settings - Personal access tokens - 생성 <br/>
+생성된 키로 이후부터 로그인 하면 된다<br/>
+해당 키는 안전한 곳에 백업이 필요하다.
 
 ## 5. 댓글 달기
-* utteranc 를 사용했다.
-- [가이드](https://utteranc.es/?installation_id=18900368&setup_action=install) 를 보는게 가장 도움이 될 것이다.
+utteranc 를 사용했다.  
+[<i class="fas fa-link"></i> 가이드](https://utteranc.es/?installation_id=18900368&setup_action=install){:target="_blank"} 를 보는게 가장 도움이 될 것이다.
 
 
 ## 6. Favicon 설정
-* [favicon-generator](https://www.favicon-generator.org/) 로 만들었다. 이미지첨부하면 각 환경별 favicon 을 만들어준다.
-![이미지](https://drive.google.com/uc?export=view&id=1w-cK1zDJ5c62XZM9kttxDoewIANGJLTW)
-* 다운로드 이후 Repo 의 Root 에 넣어준뒤 Push 하자.
+[<i class="fas fa-link"></i> favicon-generator](https://www.favicon-generator.org/){:target="_blank"} 로 만들었다. 이미지를 첨부하면 각 환경 별 favicon 을 만들어준다.  
+![이미지](https://drive.google.com/uc?export=view&id=1w-cK1zDJ5c62XZM9kttxDoewIANGJLTW)  
+다운로드 이후 Repo 의 Root 에 넣어준뒤 Push 하자.
 
 
-참고 사이트 : [7271kim.github.com](https://github.com/7271kim/7271kim.github.com)
+[<i class="fas fa-link"></i>  참고 사이트 - 7271kim.github.com](https://github.com/7271kim/7271kim.github.com){:target="_blank"}
 
