--- a/git/blog/_posts/2021-08-18-start.md
+++ b/git/blog/_posts/2021-08-18-start.md
@@ -37,7 +37,7 @@ Pages 에 가면 설정버튼 있다. 누르자! 완료!
 
 ## 2. 설치
 ### 2.1 Jekyll 설치
-[Jekyll]( /clean-code/dictionary/jekyll/)  에 의해 구동된다. 설치하자
+[<i class="fas fa-link"></i> Jekyll]( /clean/dictionary/jekyll/)  에 의해 구동되어 설치가 필요하다.
 ```
 gem install jekyll
 ```
@@ -45,7 +45,7 @@ gem install jekyll
 ### 2.2 테마 고르기
 테마는 마음에 드는 것으로 선택하자. 검색하면 테마를 모아놓은 사이트가 **아주** 많다.  
 
-나의 테마 선정 : minimal-mistakes [<i class="fas fa-link"></i> 데모 보러 가기](https://jamstackthemes.dev/demo/theme/minimal-mistakes/){:target="_blank"}  
+이 블로그의 테마 : minimal-mistakes [<i class="fas fa-link"></i> 데모 보러 가기](https://jamstackthemes.dev/demo/theme/minimal-mistakes/){:target="_blank"}  
 ![이미지](https://drive.google.com/uc?export=view&id=1DbZRlyh1P4syKGbaQElM5LyS-kCpr_RO)
 
 [<i class="fas fa-link"></i> minimal-mistakes 의 설치 가이드](https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/){:target="_blank"}를 보면 각 설정이 있는데, 이는 테마 별로 비슷한 점도 있지만 다른 점도 있다. 이 부분은 **본인이 선정한 테마의 가이드**를 참고하는 것이 가장 좋다.  
@@ -59,6 +59,8 @@ gem install bundler
 해당 글을 보다보면 ..zshrc, .bashrc 와 같은 내용이 있는데 맥 터미널의 경우 상단 창에 표시가 된다.<br/>
 zshrc, .bashrc의 더 자세한 사항은 [<i class="fas fa-link"></i> 여기](https://vnthf.github.io/blog/bash/){:target="_blank"}를 참고하자.  
 
+
+
 ## 3. 로컬 서버 실행
 config.yml 를 수정하면 재시작이 필요하다.  
 .md 파일이나 .html 파일을 수정하면 재시작이 필요없다.  
@@ -68,10 +70,16 @@ config.yml 를 수정하면 재시작이 필요하다.
 bundle exec jekyll serve
 ```
 
-### 3.2 로컬 서버 종료
+### 3.2 로컬 서버 종료(Mac 기준)
 ```
 commend + c
 ```
+
+이후엔
+```
+jekyll serve
+```
+로 서버를 실행할 수 있다!
 
 ## 3. 브라우저 접속
 ```
@@ -80,11 +88,6 @@ http://127.0.0.1:4000/
 http://localhost:4000/
 ```
 여기 까지 된다면 성공!  
-이후엔
-```
-jekyll serve
-```
-로 서버를 실행할 수 있다!
 
 ## 4. Repo 에 Push 하기
 ```
@@ -99,6 +102,7 @@ Settings - Developer settings - Personal access tokens - 생성 <br/>
 utteranc 를 사용했다.  
 [<i class="fas fa-link"></i> 가이드](https://utteranc.es/?installation_id=18900368&setup_action=install){:target="_blank"} 를 보는게 가장 도움이 될 것이다.
 
+> 자신의 테마에서 comments 에 대한 지원이 된다면 _config.yml 의 설정을 통해 가능 할 수도 있다.
 
 ## 6. Favicon 설정
 [<i class="fas fa-link"></i> favicon-generator](https://www.favicon-generator.org/){:target="_blank"} 로 만들었다. 이미지를 첨부하면 각 환경 별 favicon 을 만들어준다.  
