[Fix] 신규 포맷으로 변경

--- a/git/commend/_posts/2018-10-17-rebase.md
+++ b/git/commend/_posts/2018-10-17-rebase.md
@@ -2,21 +2,22 @@
 sidebar:
   title: "Git"
   nav: sidebar-git
-title: "Rebase"
+  icon: "fab fa-github"
+title: "[Git] rebase"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : 커밋들을 합쳐 새로운 커밋을 만든다.
+depth: 
+  - title: "Git"
+    url: /git/
+    icon: "fab fa-github"
+  - title: "Commend"
+    url: /git/commend/
+    icon: "far fa-folder-open"
 ---
-[Git](/git/) / [Commend](/git/commend/) / **Rebase**
-{: .notice--warning}
+커밋들을 합쳐 새로운 커밋을 만든다.
 
-![](https://git-scm.com/images/logo@2x.png)
-
-## 1. 개요
-- 커밋들을 합쳐 새로운 커밋을 만든다.
-
-## 2. 코드
+## 1. 코드
 ```
 git rebase master
 ```
@@ -25,4 +26,5 @@ git rebase master
 git rebase --onto master server client
 ```
 
-- 참고: https://git-scm.com/book/ko/v2/Git-%EB%B8%8C%EB%9E%9C%EC%B9%98-Rebase-%ED%95%98%EA%B8%B0
+## 2. 참고
+[<i class="fas fa-link"></i> 3.6 Git 브랜치 - Rebase 하기](https://git-scm.com/book/ko/v2/Git-%EB%B8%8C%EB%9E%9C%EC%B9%98-Rebase-%ED%95%98%EA%B8%B0){:target="_blank"}
