--- a/git/commend/_posts/2018-10-17-reset.md
+++ b/git/commend/_posts/2018-10-17-reset.md
@@ -2,59 +2,59 @@
 sidebar:
   title: "Git"
   nav: sidebar-git
-title: "Reset"
+  icon: "fab fa-github"
+title: "[Git] reset"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : "[Git] pull 강제로 받기, commit한 이전 코드 취소하기, 특정 시점으로 돌아가는 이력자체도 남지 않고 이동"
+depth: 
+  - title: "Git"
+    url: /git/
+    icon: "fab fa-github"
+  - title: "Commend"
+    url: /git/commend/
+    icon: "far fa-folder-open"
 ---
-[Git](/git/) / [Commend](/git/commend/) / **Reset**
-{: .notice--warning}
-![](https://git-scm.com/images/logo@2x.png)
+commit한 이전 코드 취소하기, 특정 시점으로 돌아가는 이력자체도 남지 않고 이동
 
-## 1. 개요
-- commit한 이전 코드 취소하기
-- 특정 시점으로 돌아가는 이력자체도 남지 않고 이동
-
-## 2. Options
-- hard
-    * 수정 된 모든 내용 제거하고 이동
+## 1. Options
+### hard
+수정 된 모든 내용 제거하고 이동
     
-- sorf
-    * 수정 된 내용 유지 상태로 이동
-    * commit 유지 상태로 이동
+### sorf
+수정 된 내용 유지 상태로 이동  
+commit 유지 상태로 이동
 
-- mixed(default)
-    * 수정 된 내용 유지 상태로  남고 이동
-    * commit 해야하는 상태
+### mixed(default)
+수정 된 내용 유지 상태로  남고 이동  
+commit 해야하는 상태
 
-## 3. 코드
-- hard
+## 2. 코드
+### hard
 ```
 git reset --hard <head> 
 ```
     
-- sorf
+### sorf
 ```
 git reset --sorf <head> 
 ```
 
-- mixed
+### mixed
 ```
 git reset --mixed <head> 
 or 
 git reset <head> 
 ```
 
-## 4. node 이전으로 이동
-- head 6개 이전 이력으로 이동
+## 3. node 이전으로 이동
+head 6개 이전 이력으로 이동
 ```
 git reset HEAD~6
 ```
 
-## 5. Git pull 강제로 받기
-- Git 를 쓰다 보면, origin master 와 local git 의 매칭이 안될 때가 있다. 
-- 이때 pull 명령시 에러가 날 수 있다.
+## 4. Git pull 강제로 받기
+Git 를 쓰다 보면, origin master 와 local git 의 매칭이 안될 때가 있다.  이때 pull 명령시 에러가 날 수 있다.
 ```
 git reset --hard HEAD 
 git pull origin master
