--- a/git/commend/_posts/2018-10-17-revert.md
+++ b/git/commend/_posts/2018-10-17-revert.md
@@ -2,20 +2,22 @@
 sidebar:
   title: "Git"
   nav: sidebar-git
-title: "Revert"
+  icon: "fab fa-github"
+title: "[Git] revert"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : "commit한 이전 코드 취소하기"
+depth: 
+  - title: "Git"
+    url: /git/
+    icon: "fab fa-github"
+  - title: "Commend"
+    url: /git/commend/
+    icon: "far fa-folder-open"
 ---
-[Git](/git/) / [Commend](/git/commend/) / **Revert**
-{: .notice--warning}
-![](https://git-scm.com/images/logo@2x.png)
-
-## 1. 개요
-- commit한 이전 코드 취소하기
-- 특정 시점으로 돌아가는 이력이 남게 됨
-- 이미 push 했다면, revert 로 돌려야 함
+commit한 이전 코드 취소하기  
+특정 시점으로 돌아가는 이력이 남게 됨  
+이미 push 했다면, revert 로 돌려야 함
 
 ## 2. 코드
 ```
