--- a/git/commend/_posts/2018-06-25-log.md
+++ b/git/commend/_posts/2018-06-25-log.md
@@ -2,56 +2,61 @@
 sidebar:
   title: "Git"
   nav: sidebar-git
-title: "Log"
+  icon: "fab fa-github"
+title: "[Git] log"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : "커밋 히스토리 조회하기"
+depth: 
+  - title: "Git"
+    url: /git/
+    icon: "fab fa-github"
+  - title: "Commend"
+    url: /git/commend/
+    icon: "far fa-folder-open"
 ---
-[Git](/git/) / [Commend](/git/commend/) / **Log**
-{: .notice--warning}
-![](https://git-scm.com/images/logo@2x.png)
+Git의 기초 커밋 히스토리 조회하기
 
-## 1. 개요
-- Git의 기초 커밋 히스토리 조회하기
-
-## 2. Options
-- p
-    * -p 는 각 커밋의 diff 결과를 보여준다.
+## 1. Options
+### p  
+-p 는 각 커밋의 diff 결과를 보여준다.
     
-- stat
-    * 각 커밋의 통계 정보를 조회할 수 있다.
+### stat
+각 커밋의 통계 정보를 조회할 수 있다.
 
-- pretty
-    *  옵션을 통해 히스토리 내용을 보여줄 때 기본 형식 이외에 여러 가지 중에 하나를 선택할 수 있다. 
-    * oneline 옵션은 각 커밋을 한 라인으로 보여준다.
+### pretty
+옵션을 통해 히스토리 내용을 보여줄 때 기본 형식 이외에 여러 가지 중에 하나를 선택할 수 있다.  
+oneline 옵션은 각 커밋을 한 라인으로 보여준다.
 
-- short, full, fuller
-    * 정보를 조금씩 가감해서 보여준다.
+### short, full, fuller
+정보를 조금씩 가감해서 보여준다.
     
-- format
-    * 나만의 포맷으로 결과를 출력하고 싶을 때 사용한다
+### format
+나만의 포맷으로 결과를 출력하고 싶을 때 사용한다
     
-## 3. 코드
+## 2. 코드
+### 시간 순
 ```
 git log
 ```
-- 시간 순
-
+### 최근 2개
 ```
 git log -p -2
 ```
-- 최근 2개
 
+### stat
 ```
 git log --stat
 ```
-- --stat 옵션은 어떤 파일이 수정됐는지, 얼마나 많은 파일이 변경됐는지, 또 얼마나 많은 라인을 추가하거나 삭제했는지 보여준다. 요약정보는 가장 뒤쪽에 보여준다.
+--stat 옵션은 어떤 파일이 수정됐는지,  
+얼마나 많은 파일이 변경됐는지,  
+또 얼마나 많은 라인을 추가하거나 삭제했는지 보여준다.  
+요약정보는 가장 뒤쪽에 보여준다.
 
+### pretty
 ```
 git git log --pretty=oneline
 ```
-- 최근 2개
 
 ```
 git git log --pretty=format:"%h - %an, %ar : %s"
@@ -76,7 +81,8 @@ git git log --pretty=format:"%h - %an, %ar : %s"
 | %cr | 커미터 상대적 시각 |
 | %s | 요약 |
 
-- 참고: [Git의 기초 커밋 히스토리 조회하기](https://git-scm.com/book/ko/v1/Git의-기초-커밋-히스토리-조회하기)
+## 3. 참고
+[<i class="fas fa-link"></i> Git의 기초 커밋 히스토리 조회하기](https://git-scm.com/book/ko/v1/Git의-기초-커밋-히스토리-조회하기){:target="_blank"}
 
 
 
