[Fix] 신규 포맷으로 변경

--- a/git/commend/_posts/2018-06-25-log.md
+++ b/git/commend/_posts/2018-06-25-log.md
@@ -3,7 +3,7 @@ sidebar:
   title: "Git"
   nav: sidebar-git
   icon: "fab fa-github"
-title: "[Git] log"
+title: "[Git] log - 히스토리 조회하기"
 toc: true
 toc_sticky: true
 toc_label: 목차
