--- a/git/commend/_posts/2018-10-17-revert.md
+++ b/git/commend/_posts/2018-10-17-revert.md
@@ -3,7 +3,7 @@ sidebar:
   title: "Git"
   nav: sidebar-git
   icon: "fab fa-github"
-title: "[Git] revert"
+title: "[Git] revert - commit한 이전 코드 취소하기"
 toc: true
 toc_sticky: true
 toc_label: 목차
