--- a/git/commend/branch/_posts/2018-07-06-delete.md
+++ b/git/commend/branch/_posts/2018-07-06-delete.md
@@ -2,26 +2,30 @@
 sidebar:
   title: "Git"
   nav: sidebar-git
-title: "브랜치 삭제하기"
+  icon: "fab fa-github"
+title: "[Git] branch -d - 브랜치 삭제하기"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : "브랜치 삭제하기"
+depth: 
+  - title: "Git"
+    url: /git/
+    icon: "fab fa-github"
+  - title: "Commend"
+    url: /git/commend/
+    icon: "far fa-folder-open"
+  - title: "Branch"
+    url: /git/commend/branch/
+    icon: "far fa-folder-open"
 ---
-[Git](/git/) / [Commend](/git/commend/) / [branch](/git/commend/branch/) / **삭제하기**
-{: .notice--warning}
-![](https://git-scm.com/images/logo@2x.png)
-
-## 1. 개요
-- 브랜치 삭제하기
+브랜치 삭제하기
 
 
-## 2. 코드
+## 코드
 ```
 $ git branch -d <branchname>
 ```
 
-
-
-- 출처: [1. 누구나 쉽게 이해할 수 있는 Git 입문 - 브랜치 삭제하기](https://backlog.com/git-tutorial/kr/stepup/stepup2_5.html)
+## 참고 
+[<i class="fas fa-link"></i> 1. 누구나 쉽게 이해할 수 있는 Git 입문 - 브랜치 삭제하기](https://backlog.com/git-tutorial/kr/stepup/stepup2_5.html){:target="_blank"}
 
