--- a/git/commend/branch/_posts/2018-07-06-fetch.md
+++ b/git/commend/branch/_posts/2018-07-06-fetch.md
@@ -2,33 +2,28 @@
 sidebar:
   title: "Git"
   nav: sidebar-git
-title: "Fetch"
+  icon: "fab fa-github"
+title: "[Git] fetch - 원격저장소 코드 로컬에 가져오기"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : "원격저장소 코드 로컬에 가져오기"
+depth: 
+  - title: "Git"
+    url: /git/
+    icon: "fab fa-github"
+  - title: "Commend"
+    url: /git/commend/
+    icon: "far fa-folder-open"
+  - title: "Branch"
+    url: /git/commend/branch/
+    icon: "far fa-folder-open"
 ---
-[Git](/git/) / [Commend](/git/commend/) / [branch](/git/commend/branch/) / **가져오기**
-{: .notice--warning}
-![](https://git-scm.com/images/logo@2x.png)
-
-## 1. 개요
-- 원격저장소 코드 로컬에 가져오기
-
-## 3. 코드
+원격저장소 코드 로컬에 가져오기
+## 코드
 ```
-git fetch origin develop
-```
-
-```
-git merge FETCH_HEAD 
-```
-* 헤드로 넘어간다.
-
-```
-git push origin HEAD
+git fetch origin <branchname>
 ```
 
 
-
-- 출처: [1. 누구나 쉽게 이해할 수 있는 Git 입문 - fetch, 원격 저장소의 데이터를 로컬에 가져오기만 하기](https://backlog.com/git-tutorial/kr/stepup/stepup3_2.htmll)
+## 참고 
+[<i class="fas fa-link"></i> 1. 누구나 쉽게 이해할 수 있는 Git 입문 - fetch, 원격 저장소의 데이터를 로컬에 가져오기만 하기](https://backlog.com/git-tutorial/kr/stepup/stepup3_2.html){:target="_blank"}
