--- a/git/commend/branch/_posts/2018-07-06-create.md
+++ b/git/commend/branch/_posts/2018-07-06-create.md
@@ -2,36 +2,46 @@
 sidebar:
   title: "Git"
   nav: sidebar-git
-title: "브랜치 생성하기"
+  icon: "fab fa-github"
+title: "[Git] branch - 브랜치 생성하기"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : "브랜치 생성하기"
+depth: 
+  - title: "Git"
+    url: /git/
+    icon: "fab fa-github"
+  - title: "Commend"
+    url: /git/commend/
+    icon: "far fa-folder-open"
+  - title: "Branch"
+    url: /git/commend/branch/
+    icon: "far fa-folder-open"
 ---
-[Git](/git/) / [Commend](/git/commend/) / [branch](/git/commend/branch/) / **생성하기**
-{: .notice--warning}
-![](https://git-scm.com/images/logo@2x.png)
 
-## 1. 개요
-- 브랜치 생성
+브랜치 생성
 
-## 2. 코드
+## 코드
 ```
 $ git branch <branchname>
 ```
 
-## 3. Bitbucket GUI 로 생성
+## Bitbucket GUI 로 생성
+### Create branch 를 선택한다.
+![이미지](https://drive.google.com/uc?export=view&id=1qNsF8BOe7cpMyimkBHz-E_L3b4VaeFFA)  
 
-![이미지](https://drive.google.com/uc?export=view&id=1qNsF8BOe7cpMyimkBHz-E_L3b4VaeFFA)
-* Create branch 를 선택한다.
 
-![이미지](https://drive.google.com/uc?export=view&id=1nfu0fWZi7ALKwIqCaNr6hUwjki0eBVFM)
-* Branch Type 을 선택한다.
+### Branch Type 을 선택한다.
+![이미지](https://drive.google.com/uc?export=view&id=1nfu0fWZi7ALKwIqCaNr6hUwjki0eBVFM)  
 
-![이미지](https://drive.google.com/uc?export=view&id=1mRcN7qwBGp7QMTjqK-looJtSkMGko1Ck)
-* Branch from 으로 대상 Branch 를 선택한다.
 
-![이미지](https://drive.google.com/uc?export=view&id=1Me5FKEXB8CF0Hw8Sy0D1ia2xfDib0R49)
-* Name 을 입력한다.
+### Branch from 으로 부모 Branch 를 선택한다.
+![이미지](https://drive.google.com/uc?export=view&id=1mRcN7qwBGp7QMTjqK-looJtSkMGko1Ck)  
 
-참고 : [누구나 쉽게 이해할 수 있는 Git 입문 - 튜토리얼1: 브랜치를 사용해보자](https://backlog.com/git-tutorial/kr/stepup/stepup2_2.html)
+
+### Name 을 입력한다.
+![이미지](https://drive.google.com/uc?export=view&id=1Me5FKEXB8CF0Hw8Sy0D1ia2xfDib0R49)  
+
+
+## 참고 
+[<i class="fas fa-link"></i> 누구나 쉽게 이해할 수 있는 Git 입문 - 튜토리얼1: 브랜치를 사용해보자](https://backlog.com/git-tutorial/kr/stepup/stepup2_2.html){:target="_blank"}
