--- a/cs/memory/_posts/2018-12-31-memory.md
+++ b/cs/memory/_posts/2018-12-31-memory.md
@@ -2,28 +2,26 @@
 sidebar:
   title: "CS"
   nav: sidebar-cs
+  icon: "fas fa-microchip"
 title: "메모리란?"
 toc: true
 toc_sticky: true
 toc_label: 목차
-excerpt : 0과 1을 저장할 수 있는 저장공간을 가진 반도체
+depth: 
+  - title: "CS"
+    url: /cs/
+    icon: "fas fa-microchip"
+  - title: "Memory"
+    url: /cs/memory/
+    icon: "far fa-folder-open"
 ---
-[CS](/cs/) / [Memory](/cs/memory/) / **{{ page.title }}**
-{: .notice--warning}
-
-## 1. 개요
-0과 1을 저장할 수 있는 저장공간을 가진 반도체
-
-
-## 2. 전기 신호
+0과 1을 저장할 수 있는 저장공간을 가진 반도체  
 전기가 들어오면 1, 전기가 들어오지 않으면 0이 처리 된다.
 
-| ON     | OFF     |
-|---    |---    |
-| 1     | 0     |
+![Image](https://drive.google.com/uc?export=view&id=1ofk4896DRh9fA320bZUcXX3bW41MYDO8)
 
-## 3. 램 8G, 16G를 말하는 메모리
+## 종류
+### 램 8G, 16G를 말하는 메모리
 실행 중인 프로그램과 프로그램에서 사용되는 데이터를 저장하는데 사용되는 메인 메모리
-    
-## 4. 하드디스크
+### 하드디스크
 파일을 저장하는 의미에서 일종의 메모리라고 볼 수 있다.
